fix(style): line-height on mobile heading

--- a/src/components/atoms/Text/H1/index.module.scss
+++ b/src/components/atoms/Text/H1/index.module.scss
@@ -4,5 +4,9 @@
   color: c.$color-text-primary;
   font-family: "Signika Negative", sans-serif;
   font-size: 26px;
-  line-height: 1.5;
+  line-height: 1;
+
+  @include c.mq-pc {
+    line-height: 1.5;
+  }
 }
